[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzbench"
version = "0.1.0"
description = "FuzzBench - Fuzzer Benchmarking As a Service"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic==1.8.1",
    "google-api-python-client==2.64.0",
    "google-auth==2.12.0",
    "google-cloud-error-reporting==1.6.3",
    "google-cloud-logging==3.1.2",
    "google-cloud-secret-manager==2.12.6",
    "clusterfuzz==2.6.0",
    "Jinja2==3.1.2",
    "numpy==1.23.4",
    "MarkupSafe==2.1.1",
    "Orange3==3.33.0",
    "pandas==1.4.4",
    "psutil==5.9.2",
    "psycopg2-binary==2.9.4",
    "pyfakefs==5.0.0",
    "pytest==7.1.3",
    "python-dateutil==2.8.2",
    "pytz==2020.1",
    "PyYAML==6.0",
    "redis==4.3.4",
    "rq==1.11.1",
    "scikit-posthocs==0.7.0",
    "scipy==1.9.2",
    "seaborn==0.13.2",
    "sqlalchemy==1.4.41",
    "protobuf==3.20.3",
]

[project.optional-dependencies]
dev = [
    "pylint==2.15.4",
    "pytype==2022.10.13",
    "yapf==0.32.0",
]

[tool.setuptools.packages.find]
# Include all packages in the root directory
include = ["common*", "experiment*", "analysis*", "database*", "service*", "fuzzbench*"]

[tool.uv]
# Tell uv to install the project in editable mode
dev-dependencies = []
